--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "fuels": "^0.97.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
