--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fuels/connectors": "^0.36.1",
     "@fuels/react": "^0.36.1",
     "@tanstack/react-query": "^5.62.15",
+    "@vercel/analytics": "^1.4.1",
     "fuels": "^0.97.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
